welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
	if (getCouleurSol) {
            ^SlugTracking:8: error: reassignment to val
	Color.green=true;
                   ^SlugTracking:11: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
		return Color.green;
                             ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
	if (!estFaceMur) {
        ^